app/assets/stylesheets/customs.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Righteous);
@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);

$headerFont: 'Righteous', cursive;
$paraFont: 'Roboto', sans-serif;

$navbarColor: white;
$primaryColor: #d1bed1;
$btnColor: #8d5e8d;

@mixin box  {
  -webkit-box-shadow: 0px 0px 30px 0px rgba(211,211,211,1);
  -moz-box-shadow: 0px 0px 30px 0px rgba(211,211,211,1);
  box-shadow: 0px 0px 30px 0px rgba(211,211,211,1);
}

@mixin button {
  padding: 5px 20px;
  color: $btnColor;
  background-color: white;
  border-radius: 4px;
  border: 1px solid $btnColor;
  &:hover{
    color: white;
    background-color: $btnColor;
    border-color: transparent;
  }
}


* {
  box-sizing: border-box;
}

body  {
  background-color: #f5f5f5;
}

h1  {
  font-family: $headerFont;
  text-align: center;
}

/**************
  Navigation
***************/
.navbar {
  height: 60px;
  margin-bottom: 0;
  background-color: $navbarColor;
}

.navbar-brand {
  font-family: $headerFont;
  font-size: 2.5em;
  color: #180b17;
  &:hover {
    color: white !important;
  }
}

.login-signup {
  display: inline-block;
  margin-top: 15px;
  font-family: $headerFont;
  font-size: 1.2em;
  &:hover {
    text-decoration: none;
    background-color: transparent;
  }
}
/** When not log in **/
p.login-signup  {
  margin: 0 10px;
}

.loggedin {
  margin-top: 12px;
}

.loggedin-nav {
  display: inline-block;
}

/**************
     ALERT
***************/
.alert  {
  margin-top: 80px;
  margin-bottom: 0;
  text-align: center;
}

/******************
 USER PROFILE PAGE
******************/

/* new content */
textarea  {
  height: 80px;
  width: 80%;
  background-color:#f5f5f5;
  border-color:transparent;
}

.newContentDiv  {
  height: 150px;
  margin-bottom: 20px;
  @include box;
  background-color: #c6aec6;
}

.newContent {
  margin-top: 20px;
}

.tootBtn  {
  float: right;
  margin-right: 65px;
  margin-top: 5px;
  padding: 5px 20px;
  @include button;
}

/* posts */
.userposts  {
  list-style: none;
  padding: 0;
  li  {
    min-height: 80px;
    margin-bottom: 10px;
    padding: 5px 15px;
    @include box;
  }
}

.content,
.timestamp  {
  display: block;
}

.content  {
  margin-bottom: 10px;
}

.timestamp  {
  color: lightgray;
  font-size: .8em;
}

/**************
  FOOTER
***************/
footer  {
  border-top: 2px solid $primaryColor;
}

footer li {
  display: inline-block;
}

